crates/ic-lint/tests/snapshots/range_bound__range_exceeds_type_bounds.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
warning[range-bound]: @range min value -1 is less than type minimum 0
   ┌ test.idl:4:10
   │
 2 │ module MyModule {
 3 │     struct BadRange {
 4 │         @range(min=-1, max=300) octet value;  // octet is 0..255
   ·          ^^^^^ value out of bounds
 5 │     };
 6 │ };
   └──
 help: valid range is 0..255

warning[range-bound]: @range max value 300 exceeds type maximum 255
   ┌ test.idl:4:10
   │
 2 │ module MyModule {
 3 │     struct BadRange {
 4 │         @range(min=-1, max=300) octet value;  // octet is 0..255
   ·          ^^^^^ value out of bounds
 5 │     };
 6 │ };
   └──
 help: valid range is 0..255
