crates/ic-lint/tests/snapshots/range_bound__range_with_only_max.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯: missing required annotation parameter `min`
  @ test.idl:4:10

 2 │ module MyModule {
 3 │     struct RangeOnlyMax {
 4 │         @range(max=100) long percentage;
   │          ˆˆˆˆˆ annotation parameter missing
 5 │     };
 6 │ };
