crates/ic-lint/tests/snapshots/range_bound__typedef_exceeds_type_bounds.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
⨯ range-bound: @range min value -1 is less than type minimum 0
  @ test.idl:6:10

 5 │     struct BadTypedef {
 6 │         @range(min=-1, max=300) Byte value;
   │          ˆˆˆˆˆ value out of bounds
 7 │     };
 8 │ };

  ? valid range is 0..255

⨯ range-bound: @range max value 300 exceeds type maximum 255
  @ test.idl:6:10

 5 │     struct BadTypedef {
 6 │         @range(min=-1, max=300) Byte value;
   │          ˆˆˆˆˆ value out of bounds
 7 │     };
 8 │ };

  ? valid range is 0..255
