crates/ic-lint/tests/snapshots/range_bound__valid_range.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
warning[range_bound]: invalid @range annotation: Field 'value' has wrong type, expected i64
   ┌ test.idl:4:10
   │
 4 │         @range(min=-273, max=1000) long celsius;
   ·          ^^^^^ malformed annotation
   └──
