crates/ic-lint/tests/snapshots/range_bound__valid_type_bounds.snap
---
source: crates/ic-lint/tests/range_bound.rs
expression: test_lint_hir(source)
---
warning[range_bound]: invalid @range annotation: Field 'value' has wrong type, expected i64
   ┌ test.idl:6:10
   │
 6 │         @range(min=-32768, max=32767) short short_value;
   ·          ^^^^^ malformed annotation
   └──
